<resources>
    <string name="app_name">RoadWars</string>

    <!-- LoginActivity -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="go">Go!</string>
    <string name="or_register"><u>Or register!</u></string>
    <string name="welcome_message">Welcome %s!</string>
    <string name="failed_login">Failed to login</string>

    <!-- RegisterActivity -->
    <string name="register">Register</string>
    <string name="user_name">Name:</string>
    <string name="email">E-mail:</string>
    <string name="color">Color</string>
    <string name="color_profile">Color:</string>
    <string name="username">Name</string>
    <string name="email_address">Email address</string>
    <string name="choose_a_color">Choose a color: </string>
    <string name="hue">Hue</string>
    <string name="register_ok">Successfully created user</string>
    <string name="register_fail">Error creating user</string>
    <string name="fill_name">Please fill in a name!</string>
    <string name="fill_pass">Please fill in a password!</string>
    <string name="fill_email">Please fill in an email address!</string>
    <string name="choose_color">Please choose a color!</string>
    <string name="create_user">Create user</string>


    <!-- MainActivity -->
    <string name="logout">Logout</string>
    <string name="user_info">User Info</string>
    <string name="my_profile">My Profile</string>
    <string name="start">Start</string>
    <string name="userlist">World Ranking</string>
    <string name="owner_toast">Owner of %1$s: %2$s</string>
    <string name="error_points">Error saving points</string>
    <string name="nfc_friend">OK, you\'re friends!</string>
    <string name="finished_points">Finished saving points!</string>
    <string name="enable_location_access">Please allow RoadWars access to location</string>
    <string name="speed_info">%.2f km/h</string>

    <string name="added_points">Added points to this street</string>
    <string name="race_to">Race to: %s</string>
    <string name="opponent_quit">Opponent has quit</string>
    <string name="player_win">You won, points: %d</string>
    <string name="player_lose">You lost</string>
    <string name="you_won">You won!</string>


    <!-- App -->
    <string name="preview">Preview</string>

    <string name="title_activity_maps">Map</string>
    <string name="integer">%d</string>

    <string name="connection_lost">Connection lost!</string>
    <string name="gps_service_not_available">Please enable GPS service</string>

    <!-- StreetRankActivity -->
    <string name="street">Street</string>
    <string name="points">Points</string>
    <string name="test_add_points">Add 5 Points</string>
    <string name="rank_number">Rank</string>
    <string name="totalnumberownedstreets"># streets owned: </string>
    <string name="error_info">Error getting info</string>

    <!-- MinigameSelectorActivity -->
    <string name="live_race">Target Race</string>
    <string name="choose_a_minigame_for">Choose a Minigame for</string>
    <string name="fotoronde">In the picture</string>
    <string name="minigame">Minigame</string>
    <string name="title_activity_minigame">Minigame</string>
    <string name="minigame_started">Minigame started!</string>
    <string name="other_offline">Other player is offline</string>
    <string name="error_start_minigame">Error starting minigame</string>
    <string name="X">X</string>

    <!-- UserSearchActivity -->
    <string name="search_for_user">Search for user</string>
    <string name="search">Search</string>
    <string name="nfc_allowed">NFC</string>

    <!-- FriendsActivity -->
    <string name="friends">Friends</string>
    <string name="my_friends">My friends</string>
    <string name="remove_friend">Remove</string>
    <string name="new_requests">New requests</string>
    <string name="search_new_friends">Search new friends!</string>
    <string name="remove">remove</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="add_friend">add friend</string>
    <string name="accept_request">accept request</string>
    <string name="decline_req">decline request</string>
    <string name="friend_failed">Action Failed</string>
    <string name="friend_removed">Friend %s removed!</string>
    <string name="friend_request_accepted">Request from %s accepted!</string>
    <string name="friend_request_declined">Request from %s declined!</string>
    <string name="friend_streets_owned">Streets</string>

    <!-- CameraActivity -->
    <string name="capture">Capture</string>
    <string name="take_picture">Take a picture!</string>
    <string name="camera">Camera</string>

    <string name="take_picture_of">Take a picture of: %s</string>

    <!-- AboutActivity -->
    <string name="creators">Creators:</string>
    <string name="creator_names" translatable="false">Jan Vermaelen \nJef Versyck\nLaura Vranken\nThomas Vranken\nTimothy Werquin\nHolger Willems</string>
    <string name="icon">Icon</string>
    <string name="version_str">Version: %s</string>
    <string name="about">About</string>

    <!-- UserInfoActivity -->
    <string name="error_add_friend">Error adding friend</string>
    <string name="error_remove_friend_req">Error removing friend request</string>
    <string name="error_remove_friend">Error removing friend</string>
    <string name="error_accept_friend_req">Error accepting friend request</string>

    <!-- MiniGameManager -->
    <string name="race_description">Race to a specific location</string>

    <!-- Tutorial-->
    <string name="Tutorial">Tutorial</string>
    <string name="welcome_tutorial">Welcome to RoadWars!</string>
    <string name="welcome_tutorial_extra">This quick tutorial will guide you through the main features of this app.</string>
    <string name="aim_tutorial">The aim!</string>
    <string name="aim_tutorial_extra">Conquer streets and become owner by earning the highest amount of points. Fill the map with your own specific color!</string>
    <string name="start_tutorial">Start your first game!</string>
    <string name="start_tutorial_extra">Push the start button. Ride the bike. You will get points depending on your speed and time spent in the street. Be sure your speed is between 10km/h and 45 km/h. Collect your points afterwards by pressing the stop button.</string>
    <string name="friends_tutorial">Make Friends!</string>
    <string name="friends_tutorial_extra">Open your profile information. Then hit the friends button in the right corner. There you will see your friends! Make new ones by hitting the add friend button. You can do it directly by NFC or just send a request!</string>
    <string name="ranking_tutorial">See your ranking!</string>
    <string name="ranking_tutorial_extra">A short click on a claimed road will give you the owners name. A long click will give you the full rank. You can touch the user and go directly to his profile page. And maybe become friends?</string>
    <string name="minigames_tutorial">Play Minigames!</string>
    <string name="minigames_tutorial_extra">At the ranking page of a street, you will get in the right corner the opportunity to play some awesome minigames to earn more points, alone or with friends. The competition awaits!</string>
    <string name="tutorial_button">Join the war!</string>

    <!-- NFCActivity-->
    <string name="no_nfc">Sorry this device does not have NFC.</string>
    <string name="enable_nfc">Please enable NFC via Settings.</string>
    <string name="enable_beam">Please enable Android Beam.</string>
    <string name="hold_phones_together">Please hold your phones together.</string>

    <!--WorldRanking-->
    <string name="WorldRank">World Ranking</string>
    <string name="streets">Streets</string>

    <!--ChangeUserInfo-->
    <string name="change_info">Change info</string>
    <string name="change_ok">Your info has been changed</string>
    <string name="change_failed">Failed to change your info</string>
    <string name="confirm_password">Confirm password</string>
    <string name="match_pass">Passwords don\'t match</string>
    <string name="user_long">Username must be less than 15 characters</string>
</resources>
