<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_start_stop"
        android:icon="@drawable/ic_play_dark"
        android:title="@string/start"
        app:showAsAction="always"/>
    <item android:id="@+id/action_user_info"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_person_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_userlist"
        android:title="@string/userlist"
        android:icon="@drawable/ic_group_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_about"
        android:title="About"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>