<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_lost"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:visibility="gone"
        android:id="@+id/connectionLost"
        android:padding="8dp"
        android:background="#777777"
        android:clickable="true"
        android:onClick="pingClick" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="org.peno.b4.roadwars.ChangeUserInfoActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:id="@+id/user_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/password"
            android:layout_below="@id/user_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:id="@+id/email"
            android:layout_below="@id/password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/choose_a_color"
            android:id="@+id/chooseColorTextView"
            android:layout_below="@+id/email" />

        <View
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="40dp"
            android:layout_height="15dp"
            android:id="@+id/colorView"
            android:background="#000000"
            android:layout_below="@+id/email"
            android:layout_toRightOf="@id/chooseColorTextView"
            android:layout_toEndOf="@id/chooseColorTextView"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hue"
            android:src="@drawable/hue_2"
            android:id="@+id/imageView"
            android:layout_below="@id/chooseColorTextView" />

    </RelativeLayout>
</LinearLayout>
