<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.peno.b4.roadwars.TutorialActivity"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="org.peno.b4.roadwars.UserInfoActivity">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_tutorial"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_tutorial_extra"
                    android:textSize="15sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_large"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aim_tutorial"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aim_tutorial_extra"
                    android:textSize="15sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_aimtutorial"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_tutorial"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:textSize="25sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_tutorial_extra"
                    android:textSize="15sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/bicycle_icon"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_tutorial"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:textSize="25sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_tutorial_extra"
                    android:textSize="15sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <ImageView
                    android:layout_width="112dp"
                    android:layout_height="96dp"
                    android:src="@drawable/friends_icon"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ranking_tutorial"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:textSize="25sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ranking_tutorial_extra"
                    android:textSize="15sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ranking"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minigames_tutorial"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:textSize="25sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minigames_tutorial_extra"
                    android:textSize="15sp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/minigame_icon"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tutorial_button"
            android:onClick="stopTutorial"/>

    </LinearLayout>

</ScrollView>
