<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_lost"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:visibility="gone"
        android:id="@+id/connectionLost"
        android:padding="8dp"
        android:background="#777777"
        android:clickable="true"
        android:onClick="pingClick" />
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/takePicture"
            android:textColor="#26284a"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:id="@+id/camerabutton"
            android:textColor="@color/whiteText"
            android:layout_below="@+id/takePicture"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/takePicture"
            android:layout_alignStart="@+id/takePicture"
            android:layout_alignRight="@+id/takePicture"
            android:layout_alignEnd="@+id/takePicture"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/cameraicon"
            android:layout_marginTop="100dp"
            android:scaleType="fitXY"
            android:layout_below="@+id/camerabutton"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/icon" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:textColor="#ff7aff24"
            android:textSize="35sp" />

    </RelativeLayout>
</LinearLayout>
